# ParkingLot

./: package-lock.json
.github/workflows/: test.yml
backend/parking_lot/: .tool-versions  README.md  TODO.md  pyproject.toml
backend/parking_lot/config/: asgi.py  settings.py  urls.py  wsgi.py
backend/parking_lot/parking_spaces/: models.py  serializers.py  tests.py  urls.py  views.py
backend/parking_lot/parking_spaces/migrations/: 0001_initial.py
frontend/parking-lot-app/: package-lock.json  package.json
frontend/parking-lot-app/src/: App.js
