[tool.poetry]
name = "parking_lot"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.4"
djangorestframework = "^3.15.2"
poetry = "^2.0.0"

[tool.poe.tasks]
test = "poetry run ./manage.py test" 

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
