[tool.poetry]
name = "parking_lot"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.4"
djangorestframework = "^3.15.2"
poetry = "^2.0.0"
djoser = "^2.3.1"
django-cors-headers = "^4.7.0"

[tool.poetry.group.dev.dependencies]
django-extensions = "^3.2.3"

[tool.poe.tasks]
test = "poetry run ./manage.py test" 
manage = "poetry run ./manage.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
